// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoCard renders a component with expanded TodoStepList 1`] = `
<TodoCardWrapper
  theme={
    Object {
      "hoverStatusBorderColor": "#222222",
      "pageBackgroundColor": "#ffffff",
      "pageHeaderBgColor": "#222222",
      "pageMainTextColor": "#000000",
      "pageTitleColor": "#ffffff",
      "statusBorderColor": "#666666",
      "todoCardBorderColor": "#666666",
    }
  }
>
  <HeaderWrapper>
    <CardHeader>
      Todo title
    </CardHeader>
    <Status
      onClick={[Function]}
      theme={
        Object {
          "hoverStatusBorderColor": "#222222",
          "pageBackgroundColor": "#ffffff",
          "pageHeaderBgColor": "#222222",
          "pageMainTextColor": "#000000",
          "pageTitleColor": "#ffffff",
          "statusBorderColor": "#666666",
          "todoCardBorderColor": "#666666",
        }
      }
    >
      COMPLETE
    </Status>
  </HeaderWrapper>
  <Goal
    onClick={[Function]}
  >
    Goal description
  </Goal>
  <TodoStepList
    steps={Array []}
  />
</TodoCardWrapper>
`;

exports[`TodoCard renders a component with non-expanded TodoStepList 1`] = `
<TodoCardWrapper
  theme={
    Object {
      "hoverStatusBorderColor": "#222222",
      "pageBackgroundColor": "#ffffff",
      "pageHeaderBgColor": "#222222",
      "pageMainTextColor": "#000000",
      "pageTitleColor": "#ffffff",
      "statusBorderColor": "#666666",
      "todoCardBorderColor": "#666666",
    }
  }
>
  <HeaderWrapper>
    <CardHeader>
      Todo title
    </CardHeader>
    <Status
      onClick={[Function]}
      theme={
        Object {
          "hoverStatusBorderColor": "#222222",
          "pageBackgroundColor": "#ffffff",
          "pageHeaderBgColor": "#222222",
          "pageMainTextColor": "#000000",
          "pageTitleColor": "#ffffff",
          "statusBorderColor": "#666666",
          "todoCardBorderColor": "#666666",
        }
      }
    >
      COMPLETE
    </Status>
  </HeaderWrapper>
  <Goal
    onClick={[Function]}
  >
    Goal description
  </Goal>
</TodoCardWrapper>
`;
